--- a/cartographie.html
+++ b/cartographie.html
@@ -53,7 +53,7 @@
             <h1 class="display-5">Cartographie</h1>
             <p>
                 Pour avoir plus d'explications, ouvrez le panneau latéral en cliquant sur les 3 points à gauche.
-                Malheureusement il n'est pas possible de zoomer avec la souris, il faut utiliser les boutons + - en haut à droite. Il est possible de changer la taille de police dans settings -> -> customize defaults -> font size.
+                Malheureusement il n'est pas possible de zoomer avec la souris, il faut utiliser les boutons + - en haut à droite. Il est possible de changer la taille de police dans settings -> customize defaults -> font size.
             </p>
         </div>
         <br>
